--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "prepare": "husky install",
     "test": "jest --coverage"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "jest --findRelatedTests --bail"
+    }
+  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "jest --findRelatedTests --bail"
+      "eslint --fix"
     ]
   },
   "dependencies": {
@@ -23,6 +28,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
+    "classnames": "^2.3.2",
     "lint-staged": "^15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
