--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
+    "firebase": "^10.7.1",
     "classnames": "^2.3.2",
     "lint-staged": "^15.0.2",
     "react": "^18.2.0",
