--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
