feat: create tests for auth n fix test schema

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/user-event": "^14.5.2",
     "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "classnames": "^2.3.2",
     "firebase": "^10.7.1",
