--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "format:fix": "prettier --write *.{js,css,ts,tsx,jsx}",
     "prepare": "husky install",
-    "test": "jest --coverage"
+    "test": "jest --coverage --collectCoverageFrom='./src/**'"
   },
   "husky": {
     "hooks": {
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.49.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "redux-mock-store": "^1.5.4",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/redux": "^3.6.0",
+    "@types/redux-mock-store": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-react": "^4.0.3",
